; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_ocb.c_ocb_process_header.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_ocb.c_ocb_process_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_9__ = type { i32, i32, i32, %struct.TYPE_10__* }

@BLOCK = common dso_local global i32 0, align 4
@ocb_hash_block = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*, i32*, i64, i32*)* @ocb_process_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ocb_process_header(%struct.TYPE_10__* %0, i32* %1, i64 %2, i32* %3) #0 {
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_9__, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %13 = load i32, i32* @BLOCK, align 4
  %14 = zext i32 %13 to i64
  %15 = bitcast %struct.TYPE_9__* %9 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %15, i8 0, i64 24, i1 false)
  %16 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %18 = ptrtoint %struct.TYPE_10__* %17 to i32
  store i32 %18, i32* %16, align 8
  %19 = call i32 @ocb_hash_init(%struct.TYPE_9__* %9)
  %20 = load i32, i32* @BLOCK, align 4
  %21 = zext i32 %20 to i64
  %22 = call i8* @llvm.stacksave()
  store i8* %22, i8** %10, align 8
  %23 = alloca i32, i64 %21, align 16
  store i64 %21, i64* %11, align 8
  store i64 0, i64* %12, align 8
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %24, i32 0, i32 1
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32*, i32** %6, align 8
  %30 = load i64, i64* %7, align 8
  %31 = load i32, i32* @ocb_hash_block, align 4
  %32 = call i32 @cf_blockwise_accumulate(i32* %23, i64* %12, i32 %28, i32* %29, i64 %30, i32 %31, %struct.TYPE_9__* %9)
  %33 = load i64, i64* %12, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %60

35:                                               ; preds = %4
  %36 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 1
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @cf_gf128_add(i32 %37, i32 %40, i32 %42)
  %44 = load i64, i64* %12, align 8
  %45 = getelementptr inbounds i32, i32* %23, i64 %44
  %46 = mul nuw i64 4, %21
  %47 = load i64, i64* %12, align 8
  %48 = sub i64 %46, %47
  %49 = trunc i64 %48 to i32
  %50 = call i32 @memset(i32* %45, i32 0, i32 %49)
  %51 = load i64, i64* %12, align 8
  %52 = getelementptr inbounds i32, i32* %23, i64 %51
  store i32 128, i32* %52, align 4
  %53 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 2
  %54 = load i32, i32* %53, align 8
  %55 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  %56 = load i32, i32* %55, align 8
  %57 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 1
  %58 = load i32, i32* %57, align 4
  %59 = call i32 @ocb_hash_sum(i32 %54, i32* %23, i32 %56, i32 %58)
  br label %60

60:                                               ; preds = %35, %4
  %61 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  %62 = load i32, i32* %61, align 8
  %63 = load i32*, i32** %8, align 8
  %64 = call i32 @cf_gf128_tobytes_be(i32 %62, i32* %63)
  %65 = call i32 @mem_clean(%struct.TYPE_9__* %9, i32 24)
  %66 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %66)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @ocb_hash_init(%struct.TYPE_9__*) #2

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #3

declare dso_local i32 @cf_blockwise_accumulate(i32*, i64*, i32, i32*, i64, i32, %struct.TYPE_9__*) #2

declare dso_local i32 @cf_gf128_add(i32, i32, i32) #2

declare dso_local i32 @memset(i32*, i32, i32) #2

declare dso_local i32 @ocb_hash_sum(i32, i32*, i32, i32) #2

declare dso_local i32 @cf_gf128_tobytes_be(i32, i32*) #2

declare dso_local i32 @mem_clean(%struct.TYPE_9__*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #3


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
